<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Prueba3.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Prueba3.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/acerca_de_foto"
        android:layout_width="135dp"
        android:layout_height="182dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        app:srcCompat="@drawable/me" />

    <ImageButton
        android:id="@+id/emailButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round"
        android:scaleType="fitCenter"
        android:src="@drawable/email"
        app:layout_constraintStart_toEndOf="@+id/acerca_de_foto"
        app:layout_constraintTop_toTopOf="@+id/acerca_de_foto" />

    <ImageButton
        android:id="@+id/githubButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round"
        android:scaleType="fitCenter"
        android:src="@drawable/github"
        app:layout_constraintStart_toEndOf="@+id/acerca_de_foto"
        app:layout_constraintTop_toBottomOf="@+id/facebookButton" />

    <ImageButton
        android:id="@+id/facebookButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round"
        android:scaleType="fitCenter"
        android:src="@drawable/facebook"
        app:layout_constraintStart_toEndOf="@+id/acerca_de_foto"
        app:layout_constraintTop_toBottomOf="@+id/emailButton" />

    <TextView
        android:id="@+id/acerca_de_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_desarrollador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/acerca_de_foto" />

    <TextView
        android:id="@+id/acerca_de_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad_desarrollador"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acerca_de_nombre" />

    <TextView
        android:id="@+id/acerca_de_universidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universidad_desarrollador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acerca_de_ciudad" />

</androidx.constraintlayout.widget.ConstraintLayout>